styles/ContactUs.module.scss
@import "../abstract/functions", "../abstract/variables", "../abstract/responsive";


.wrapper{
    @include screenSize(100vw,auto);
    @include displayFlex(center, center, column);
    background-color: $color9;
    .content{
        @include screenSize(80%, auto);
        @include displayFlex(center, center, column);
        color: $color2;
        &__options{
            @include screenSize(100%,auto);
            @include displayFlex(space-around, center, row);
            padding: 1em 0 1em 0;
            //viewport
            @include for-viewport-only{
                @include screenSize(90%,auto);
            }
            //mobile(M)
            @include for-phone-only{
                @include displayFlex(center, center, column);
                padding: 1em 0 6em 0;
            }
            //mobile(S)
            @include for-phoneS-only {
                @include screenSize(95%,auto);
                padding: 1em 0;
            }
            //mobile(XS)
            @include for-phoneXS-only{
                @include screenSize(100%,auto);
            }
            
            &-decoration{
                @include displayFlex(center, center, column);
                max-width: 50%;
                img{
                    width: 90%;
                    @include pulseAnimation();
                }
                @include for-tablet-only{
                    display: none;
                }
            }

            &-formWraper{
                @include displayFlex(center, center, column);
                @include glassEffect();
                width: 415px;
                padding: 1vw 1vw;
                background-color: $color12;
                border-radius: 1vh;
                @include for-phoneS-only {
                    width: 95vw;
                    padding: 1.5vh 3vw;
                }

                .form{
                    @include displayFlex(center, center, column);
                    width: 100%;                  
                    gap: 1.2vh;
                    &__buttonWrapper{
                        @include screenSize(100%,auto);
                        @include displayFlex(center, center, row);
                    }

                    &__checkboxWrapper{
                        display: flex;
                        flex-direction: row;
                        justify-content: flex-start;
                        align-items: flex-start;
                        gap: 0.1vh;
                        width: 100%;
                        margin: 1vh;
                        flex-basis: 100%;
                        flex-wrap: wrap;
                        h1{
                            width: 100%;
                        }
                    }
                }
            }
        }
        
    }
}

